--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   cloud_firestore: ^0.13.4+2
   flutter_spinkit: "^4.1.1"
   firebase_core: ^0.4.4+3
+  fab_circular_menu: ^1.0.0
+  badges: ^1.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
