--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   firebase_core: ^0.4.4+3
   fab_circular_menu: ^1.0.0
   badges: ^1.1.1
+  fluttertoast: ^4.0.1
+  fancy_bottom_navigation: ^0.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
